ADD element-ui, mockjs, filters, request

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.6.2",
     "nedb": "^1.8.0",
+    "qs": "^6.6.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
@@ -111,9 +112,11 @@
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "0.4.0",
     "mocha": "^5.2.0",
+    "mock": "^0.1.1",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.9.2",
+    "qs": "^6.6.0",
     "require-dir": "^1.0.0",
     "sass-loader": "^7.0.3",
     "spectron": "^3.8.0",
