--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "axios": "^0.18.0",
     "element-ui": "^2.6.2",
     "nedb": "^1.8.0",
+    "nprogress": "^0.2.0",
     "qs": "^6.6.0",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
@@ -112,10 +113,11 @@
     "karma-webpack": "^3.0.0",
     "mini-css-extract-plugin": "0.4.0",
     "mocha": "^5.2.0",
-    "mock": "^0.1.1",
+    "mockjs": "^1.0.1-beta3",
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.9.2",
+    "nprogress": "^0.2.0",
     "qs": "^6.6.0",
     "require-dir": "^1.0.0",
     "sass-loader": "^7.0.3",
@@ -131,5 +133,6 @@
     "webpack-dev-server": "^3.1.4",
     "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.3"
-  }
+  },
+  "__npminstall_done": false
 }
