--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "electron-localshortcut": "^3.1.0",
     "nedb": "^1.8.0",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
