--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "test": "npm run unit && npm run e2e",
-    "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix"
+    "unit": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=TRUE karma start test/unit/karma.conf.js",
+    "postinstall": "npm run lint:fix",
+    "unit:filters": "cross-env TEST_FILE=filters karma start test/unit/karma.conf.js"
   },
   "build": {
     "productName": "MGear",
