--- a/package.json
+++ b/package.json
@@ -58,10 +58,12 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "codemirror": "^5.45.0",
     "electron-localshortcut": "^3.1.0",
     "nedb": "^1.8.0",
     "nprogress": "^0.2.0",
     "qs": "^6.6.0",
+    "tui-editor": "^1.3.3",
     "vue": "^2.5.16",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.0.1",
