ADD 新增拦截器, 用于拦截vuex任意模块中的action 以控制statusBar要显示的内容

--- a/.babelrc
+++ b/.babelrc
@@ -24,7 +24,8 @@
           "modules": false
         }],
         "stage-0"
-      ]
+      ],
+      "plugins": ["transform-decorators-legacy"]
     },
     "web": {
       "presets": [
@@ -35,6 +36,8 @@
       ]
     }
   },
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    "transform-runtime"
+  ]
 }
 
